# veloshelf

./: .env.example  .gitignore  Dockerfile.flink  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
data/seeds/: anomaly_labels.jsonl  dim_sku.csv  dim_store.csv
docs/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  project.md
generator/: anomaly_injector.py  distributions.py  inventory.py  kafka_client.py  producer.py  schemas.py  seed_loader.py
infra/: init_db.sql  main.tf  terraform.tfvars.example  variables.tf
infra/modules/ec2/: main.tf
infra/modules/eks/: main.tf
infra/modules/networking/: main.tf
infra/modules/rds/: main.tf
infra/modules/s3/: main.tf
ml/: evaluate.py  export_features.py  features.py  model_loader.py  promote.py  train_detector.py  train_forecast.py
observability/: drift_job.py  metrics_exporter.py  retrain_trigger.py
observability/prometheus/: alerts.yml  prometheus.yml
orchestration/: assets.py  definitions.py  schedules.py  sensors.py
serving/: streamlit_app.py
serving/grafana/: dashboard.yml  veloshelf_dashboard.json
streaming/: job.py  scoring.py  sinks.py  validation.py
tests/: test_generator.py  test_ml.py  test_observability.py  test_phase5.py  test_smoke.py  test_streaming.py
tmp70_fnkbo/history/: runs.db
tmp70_fnkbo/history/runs/: index.db
tmp70_fnkbo/schedules/: schedules.db
