[project]
name = "veloshelf"
version = "0.1.0"
description = "Real-time quick-commerce intelligence pipeline (streaming ML + observability)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "confluent-kafka>=2.3",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "mlflow>=2.11",
    "dagster>=1.6",
    "dagster-webserver>=1.6",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "evidently>=0.4",
    "scipy>=1.12",
    "prometheus-client>=0.20",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["generator", "streaming", "ml", "observability", "orchestration"]